infinitude/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: infinitude
  labels:
    app: infinitude
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: infinitude
  template:
    metadata:
      labels:
        app: infinitude
    spec:
      hostNetwork: true
      containers:
        - name: infinitude
          image: nebulous/infinitude
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: "/infinitude/state"
              name: state
      volumes:
        - name: state
          persistentVolumeClaim:
            claimName: infinitude-state
