infinitude/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: infinitude
  labels:
    app: infinitude
  annotations:
    metallb.universe.tf/allow-shared-ip: plexmediaserver
spec:
  type: LoadBalancer
  loadBalancerIP: 172.19.74.21
  selector:
    app: infinitude
  ports:
  - name: infinitude
    protocol: TCP
    port: 3000
