infinitude/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infinitude
  labels:
    app: infinitude
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
        - "infinitude.k.oneill.net"
      secretName: "infinitude-tls"
  rules:
    - host: "infinitude.k.oneill.net"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: infinitude
                port:
                  number: 3000
